# swag

./: .gitignore  Makefile  README.md  README.rst  colors.py  createFolders.py  prettyEcho.py  pyproject.toml  setPermission.py  setup.py  swag.cast
swag/: __init__.py  __main__.py  colors.py  createFolders.py  install.py  swag.py  swaggy.py  swagprinter.py
