[tool.poetry]
name = "swag"
version = "1.6.1"
description = "Swag up your shell output with escape code magic!"
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
