[tool.poetry]
name = "swag"
version = "1.7.2"
description = "Swag up your shell output with escape code magic!"
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"
readme = "README.md"
packages = [
    { include = "swag" }
]

[tool.poetry.scripts]
swag = 'swag.__main__:app'

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
